# fri_3_letnik

dn/: vaje3
dn/vaje2/: vhdl.txt
oui/dn2/: aaaa.py  vprasanje1.py  vprasanje10.py  vprasanje2.py  vprasanje3.py  vprasanje4.py  vprasanje5.py  vprasanje6.py  vprasanje7.py  vprasanje8.py  vprasanje9.py
prevajalniki/naloga12/: demo.mmo
prevajalniki/naloga2/: Untitled-1  Untitled-2  backup.g4  changes  grammar  grammophone.txt  grammophone2.txt
prevajalniki/naloga3/: za_gapsa.zip.txt
prevajalniki/naloga8/: frami
prevajalniki/predavanja/: predavanje1.txt
prevajalniki/vaje/: vaje1
prpo/: predavanje3
ps/seminarska/: .ccls  run_docker.sh  zapiski
ps/seminarska (copy)/: download.sh  upload.sh
ps/vaja1/: a.out  serverLinux.cpp
ps/vaja2/: compile.sh  consts.h  prij_openmp  prij_pthread  prij_stev.cpp  prij_stev_openmp.c  prij_stev_pthread.cpp  test  test.sh
ps/vaja3/: a.out  compile.sh  mandelbrot.cpp
ps/vaja4/: a.out  compile.sh  sobel.cpp
ps/vaja5/: a.out  compile.sh  gpu.cpp  kernel.cl  kernel2.cl  mmul.cpp
ps/vaja6/: a.out  mpi.cpp
ps/vaja7/: .ccls  a.out  compile.sh  program.cpp  run.sh
rzhp/: vaja1
rzhp/naloga 1/: naloga1.fdb_latexmk  naloga1.fls
rzhp/vaja6/: linear.R
spo/: predzadnje_vaje
spo/test/sic_emulator/src/: CMakeLists.txt  main.cpp
spo/test/sic_emulator/src/emulator/: emulator.cpp  execute.cpp  f1f2.cpp  f3f4.cpp  loader.cpp  memory.cpp  registers.cpp
spo/test/sic_emulator/src/gui/: window.cpp
spo/test/sic_emulator/src/helpers/: helpers.cpp
tpo/: predlog
zzrs/: azure_benchmark  pings  seminarska5.zip.txt  tracert
(+1315 files in other folders)
